force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Account__c</fullName>
    <description>Make the Attendee&apos;s Company name optional, required or hidden during registration.</description>
    <inlineHelpText>Make the Attendee&apos;s Company name optional, required or hidden during registration.</inlineHelpText>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
                <default>true</default>
                <label>Hide</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>