force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Address_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Address_Label__c</fullName>
    <inlineHelpText>Override the Address label.</inlineHelpText>
    <label>Address Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>