force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__AttendeeLink_Questions__c.field-meta.xml
<CustomField>
    <fullName>conference360__AttendeeLink_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These questions will be asked in AttendeeLink.</inlineHelpText>
    <label>AttendeeLink Questions</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>EventItems_AttendeeLink</relationshipName>
    <type>Lookup</type>
</CustomField>