force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Country_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Country_Label__c</fullName>
    <inlineHelpText>Override the Country label.</inlineHelpText>
    <label>Country Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>