force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Description2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description2__c</fullName>
    <inlineHelpText>Tell people more about this ticket.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>