force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <description>Tell your attendees more about this item.</description>
    <inlineHelpText>Tell your attendees more about this item.</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>