force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Dietary_Preference_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Dietary_Preference_Label__c</fullName>
    <inlineHelpText>Override the Dietary Preference label.</inlineHelpText>
    <label>Dietary Preference Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>