force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this Item (ticket).</description>
    <inlineHelpText>The Event related to this Item (ticket).</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>