force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__FullName_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__FullName_Label__c</fullName>
    <inlineHelpText>Override the Full Name label.</inlineHelpText>
    <label>Full Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>