force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Hidden__c.field-meta.xml
<CustomField>
    <fullName>conference360__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide this item from the event checkout.</description>
    <inlineHelpText>Hide this item from the event checkout.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>