force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Item_Name__c</fullName>
    <inlineHelpText>Name of the ticket. For example, &quot;General Admission&quot;. If you define a related Product, the Public Item Name will take the Product&apos;s name automatically.</inlineHelpText>
    <label>Public Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>