force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Maximum_Quantity__c</fullName>
    <inlineHelpText>The maximum quantity of tickets that a person can register for.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>