force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>conference360__Net_Revenue__c</fullName>
    <inlineHelpText>The total amount of revenue generated from this ticket.</inlineHelpText>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>