force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Price__c.field-meta.xml
<CustomField>
    <fullName>conference360__Price__c</fullName>
    <inlineHelpText>The price for this ticket. If you define a related Product, the Product&apos;s price will automatically be added here.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>