force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>conference360__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Define a specific Price Book for the price of the Product. If this field is left blank, the Standard Price Book price will automatically be used.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>