force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Product__c.field-meta.xml
<CustomField>
    <fullName>conference360__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>