force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Quantity_Made_Available__c.field-meta.xml
<CustomField>
    <fullName>conference360__Quantity_Made_Available__c</fullName>
    <description>The total quantity for this item.</description>
    <inlineHelpText>The number of tickets available for this event.</inlineHelpText>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>