force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Relationship_Settings__c.field-meta.xml
<CustomField>
    <fullName>conference360__Relationship_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Define which Relationship Settings should be used for Attendees, Sales Documents, Transactions, Payment Methods and Payment Gateway Customers related to/generated from this Event. This Event Item lookup overrides the Event Settings lookup for Attendees.</inlineHelpText>
    <label>Relationship Settings</label>
    <referenceTo>bt_stripe__Relationship_Settings__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>