force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Remaining_Quantity__c</fullName>
    <description>The remaining quantity for this item.</description>
    <inlineHelpText>Formula is quantity available - registered quantity.</inlineHelpText>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>