force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Sales_End_Date_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_End_Date_Time_GMT__c</fullName>
    <description>Sales date of the event.</description>
    <inlineHelpText>Sales date of the event.Set automatically. Not to be manually updated</inlineHelpText>
    <label>Sales End Date/Time</label>
    <type>DateTime</type>
</CustomField>