force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_Start_Date__c</fullName>
    <description>The date sales for this item begin.</description>
    <inlineHelpText>The date sales for this item begin.</inlineHelpText>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>