force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Sold_Quantity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sold_Quantity__c</fullName>
    <inlineHelpText>The number of tickets sold.</inlineHelpText>
    <label>Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>