force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <description>The order this event item will be shown on the registration page.</description>
    <inlineHelpText>The order this event item will be shown on the registration page.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>