force-app/main/default/objects/conference360__Event_Item__c/fields/conference360__Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Revenue__c</fullName>
    <formula>conference360__Total_Ticket_Revenue__c - conference360__Total_Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>